# progress

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  PLAN.md  README.md  README_zh.md  build-docker.sh  config.example.toml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_web.py  test-config.toml
.claude/: settings.json
.claude/agents/: code-simplifier.md  rectifier.md
.claude/hooks/: post_tool_use.py
.claude/rules/: configuration.md  design.md  security.md  style.md  testing.md
.github/workflows/: claude-code-review.yml
.trellis/: .template-hashes.json
devops/: dev.py
devops/ansible/: hosts.yml  main.yml
docker/: Caddyfile  Dockerfile  Dockerfile.frontend  build.py  build.sh  docker-compose.yml  entrypoint.sh
docs/: 2026-02-10-release-detection-and-reporting-improvements-design.md  2026-02-10-release-detection-reporting-implementation-plan.md  2026-02-11-discovered-repositories-report-template-design.md  config-refactor.md  manual-verification-checklist.md  migration-gitpython-pygithub.md  observability-deploy.md  observability-prod-findings.md  observability.md  verification-config-refactor.md
docs/plans/: 2025-02-08-git-suffix-fix-design.md  2025-02-08-html-escape-implementation.md  2025-02-13-notification-framework-refactor-design.md  2025-02-13-storage-framework-refactor-design.md  (+7 more)
guides/: config.md  contrib.md  dev.md  i18n.md  observability.md  proposal_tracking.md  testing.md
scripts/: compilemessages.sh  makemessages.sh
specs/: index.md  proposal-module-design.md
tests/: integration.py  test_analyzer.py  test_batch_model.py  test_changelog_parsers.py  test_changelog_tracker.py  test_cli.py  test_config.py  test_config_store.py  test_db_path.py  test_editor_schema.py  test_enums.py  test_github.py  test_github_client.py  test_github_releases.py  test_markpost.py  test_owner.py  test_proposal_parsers.py  test_proposal_tracking.py  test_publish.py  test_release_analysis.py  test_repo.py  test_repo_releases.py  test_reporter.py  test_repository.py  test_save_report.py  test_telemetry.py  test_utils.py  test_web_config.py
web/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
wiki/: buildx-reference.md  container-architecture.md  index.md  proposal-systems-research.md
(+271 files in other folders)
