[project]
name = "progress"
version = "0.0.1"
description = "Progress is a GitHub project tracking tool that traces multi-repo code changes, runs AI analysis, and generates reports to help users track open-source project progress."
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "feedgen>=0.9.0",
    "jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "peewee>=3.18.3",
    "requests>=2.32.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "mdit-py-plugins>=0.4.0",
    "tomlkit>=0.13.0",
    "gitpython>=3.1.46",
    "PyGithub>=2.8.1",
    "pytz>=2024.1",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
dev = ["watchdog>=5.0.0", "pytest>=9.0.2"]
test = ["pytest>=9.0.2", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
progress = "progress.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.27.0",
]
